# r0yLLDB

./: README.md  install.sh  pyproject.toml
.zed/: settings.json
commands/: breakpoint.py  listen.py
src/: cmds.txt  xbr.py
